<resources>
    <string name="app_name">Volunteer App</string>
    <string name="main_btn_login">Login</string>
    <string name="main_btn_create">Sign up</string>
    <string name="app_description">This app is made for Managing Volunteer work in Sudan.\nThis app manages volunteer, Donations, and services.</string>
    <string name="login_et_email_or_name">Enter Email</string>
    <string name="login_et_password">Password</string>
    <string name="login_tv_forget_password">Forget your password?</string>
    <string name="login_btn_sign_up">Create new Account</string>
    <string name="login_tv_label">Login Form</string>
    <string name="sign_et_name">Full name</string>
    <string name="sign_et_email">email@gmail.com</string>
    <string name="sign_tv_role_label">Enter the role you want to be</string>
    <string name="empty_fields">Please Fill all fields</string>
    <string name="password_doesnt_match">Password does not match</string>
    <string name="not_connected">Please open Mobile network or connect to wifi to continue</string>
    <string name="service_seeker">Service Seeker</string>
    <string name="volunteer">Volunteer</string>
    <string name="donor">Donor</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_name">Full name is invalid</string>
    <string name="add_et_username">User Name</string>
    <string name="add_et_skills">Skills</string>
    <string name="wrong_validation">Wrong email or password</string>
    <string name="progress_text">Loading…</string>
    <string name="un_activated_account">Your account is unactivated,\nCheck your messages to activate it</string>
    <string name="activate_account_label">We\'ve sent an activation email. Check your inbox.</string>
    <string name="ss_menu_logout">Log out</string>
    <string name="user_exception_message">the email is incorrect</string>
    <string name="user_collisionException">Email is already used</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Sign Up</string>
    <string name="empty_email">Enter email first</string>
    <string name="rest_password_send_successfully">We\'ve sent a password reset email. Check your inbox.</string>
    <string name="email_not_used">The entered email is not registered.</string>
    <string name="upload_title">Upload Task</string>
    <string name="task_desc">Enter Description</string>
    <string name="upload_tv_startDate">Tab to select Start Date</string>
    <string name="upload_tv_endDate">Tab to select End date</string>
    <string name="btn_submit">Submit</string>
    <string name="task_loc">Enter Location</string>
    <string name="startdate_not_selected">Start Date not selected</string>
    <string name="enddate_not_selected">End Date not selected</string>
    <string name="taskCreatedSuccessfully">Task Created Successfully</string>
    <string name="new_task">Not verified yet</string>
    <string name="header_desc">Volunteer for Your Country</string>
    <string name="nav_profile">Profile</string>
    <string name="open_drawer">Open Navigation</string>
    <string name="close_drawer">Close Navigation</string>

    <string-array name="sign_sp_roles_entries">
        <item>Select a Role</item>
        <item>Service Seeker</item>
        <item>Volunteer</item>
        <item>Donor</item>
    </string-array>

    <string-array name="sign_sp_roles_entriesA">
        <item>Select a Role</item>
        <item>Service Seeker</item>
        <item>Volunteer</item>
        <item>Donor</item>
        <item>Admin</item>
    </string-array>

    <string-array name="bank_name_entries">
        <item>Omdurman Bank</item>
        <item>Faisal Bank</item>
        <item>Al Khortoum Bank</item>
        <item>Other</item>
    </string-array>

    <string-array name="serviceType">
        <item>Select Service Type</item>
        <item>Housing Service</item>
        <item>Medical Service</item>
        <item>Food Service</item>
        <item>Provide a Service</item>
        <item>None above</item>
    </string-array>

    <string name="not_taken">Not taken yet</string>
    <string name="need_resources">Need resources</string>
    <string name="task_rejected">task is rejected</string>
    <string name="assign_member">member</string>
    <string name="assign_team">team</string>


    <string-array name="task_filter">
        <item>Not verified yet</item>
        <item>Not taken yet</item>
        <item>Need resources</item>
        <item>Finished Tasks</item>
    </string-array>

    <string-array name="assignedTo_filter">
        <item>Member</item>
        <item>Team</item>
    </string-array>

    <string-array name="user_filter">
        <item>Service Seeker</item>
        <item>Volunteer</item>
        <item>Donor</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_title">Admin Dashboard</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="admin">Admin</string>
    <string name="admin_tv_manage_users">Users management</string>
    <string name="admin_tv_manage_resource">Resource management</string>
    <string name="admin_tv_manage_task">Tasks Management</string>
    <string name="admin_tv_manage_report">Display Reports</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="vol_tv_available_task">Available Tasks</string>
    <string name="vol_tv_current_task">Current Tasks</string>
    <string name="vol_tv_manageSkills">Skills Management</string>
    <string name="vol_tv_manageAvailability">Manage Availability</string>
    <string name="btn_add">Add</string>
    <string name="btn_save">Save</string>
    <string name="currentSkills">Current Skills</string>
    <string name="ms_et_skills_hint">Type to add a Skill</string>
    <string name="op_done">Done</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Phone Number</string>
    <string name="profile_tv_dateJoined">"Joined on : "</string>
    <string name="profile_tv_role">"Role : "</string>
    <string name="email_text">"Email : "</string>
    <string name="assignToMember">Member</string>
    <string name="ct_tv_totalPrice">Total Price</string>
    <string name="ct_tv_providedPrice">Provided Price</string>
    <string name="ct_btn_postUpdate">Post Update</string>
    <string name="ct_btn_taskFinished">Finish the Task</string>
    <string name="btn_provide">Provide</string>
    <string name="donor_tv_donate">Donate</string>
    <string name="donor_tv_viewPriviousDonates">Privious Donatations</string>
    <string name="account_et_accountNumberHint">Enter Account Number</string>
    <string name="account_et_ibanHint">Enter IBAN</string>
    <string name="account_et_accountNameHint">Enter Bank Name</string>
    <string name="acItem_tv_IBAN">"IBAN : "</string>
    <string name="completedTasks">"Completed Tasks : "</string>
    <string name="availability">"Availability : "</string>
    <string name="balance">"Balance : "</string>
    <string name="upgradeToTeamLeader">Upgrade to Team Leader</string>
    <string name="individual">Individual</string>
    <string name="team">Team</string>
    <string name="enterBalance">Enter Balance</string>
    <string name="insufficentResources">Insufficient Money</string>
    <string name="dialog_msg">Enter initial amount</string>
    <string name="assignToLabel">Assigned To</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="donor_tv_label">Available Accounts for donations</string>
    <string name="donor_tv_label2">My Accounts</string>
    <string name="donationSuccessfull">Thank you for your donation</string>
    <string name="don_tv_title">Donations</string>
    <string name="receivingEntity">"Receiving Entity : "</string>
    <string name="invalid_receiverAccount">The receiver has no Accounts</string>
    <string name="invalid_donorAccount">You have no accounts</string>
    <string name="select_more_than_one">You can/\'t select more than 1 Account</string>
    <string name="select_less_than_one">You have to select 1 accounts</string>
    <string name="transfertoDifferentBank">You can\\\'t transfer to a different bank</string>
    <string name="endTask">Finish The Task</string>
    <string name="finishedTask">Finished Tasks</string>
    <string name="invalid_date">The end date is before the start date</string>
    <string name="invalid_password">Password should be at least 6 character</string>
    <string name="account_number">"Account Number: "</string>
    <string name="account_deleted">Account Deleted Successfully</string>
    <string name="error">Something went wrong</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="del_title">Delete</string>
    <string name="del_account_message">are you sure you want to delete this account?</string>
    <string name="btn_delete_account">Delete Account</string>
    <string name="generateReportTitle">Generate Report</string>
    <string name="generateReportMessage">Enter Description</string>
    <string name="invalid_number">Invalid number</string>
    <string name="report">"Report "</string>
    <!--    <string name="redundantskill">The Skill Already exists</string>-->
</resources>