<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/graylight"
    tools:context=".view.DashboardScreen.DonorDashboard.DonateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/donate_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        style="@style/Theme.VolunteerApp.mToolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donor_tv_label"
        style="@style/Theme.VolunteerApp.mTitleStyle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donor_tv_label2"
        style="@style/Theme.VolunteerApp.mTitleStyle" />

    <Spinner
        android:id="@+id/donate_sp_accounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Theme.VolunteerApp.mSpinnerStyle" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/donate_et_amount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/amount_hint"
            style="@style/Theme.VolunteerApp.mEditTextStyle"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/donate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donor_tv_donate"
        style="@style/Theme.VolunteerApp.mButton"/>
</LinearLayout>