<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DashboardScreen.AdminDashborad.UserDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/details__tv_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Volunteer Name"
        style="@style/Theme.VolunteerApp.mTitleStyle"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/app_bar"/>

    <TextView
        android:id="@+id/details__tv_user_Type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Volunteer Name"
        style="@style/Theme.VolunteerApp.mTextStyle"
        android:layout_below="@id/details__tv_user_name"/>

    <TextView
        android:id="@+id/details__tv_user_CompletedTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completedTasks"
        style="@style/Theme.VolunteerApp.mTextStyle"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/details__tv_user_availability"/>

    <TextView
        android:id="@+id/details__tv_user_availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/availability"
        style="@style/Theme.VolunteerApp.mTextStyle"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/details__tv_user_Type"/>

    <TextView
        android:id="@+id/details__tv_user_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        style="@style/Theme.VolunteerApp.mTextStyle"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/details__tv_user_CompletedTasks"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Theme.VolunteerApp.mButton"
        android:id="@+id/details_btn_update"
        android:text="@string/upgradeToTeamLeader"
        android:layout_alignParentBottom="true" />

</RelativeLayout>