<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    tools:context=".view.HomeScreen.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_btn_login"
                style="@style/Theme.VolunteerApp.mLinearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_btn_login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_btn_create"
                style="@style/Theme.VolunteerApp.mLinearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_btn_create" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_tv_title"
            style="@style/Theme.VolunteerApp.mToolbarTitleStyle"
            android:textSize="@dimen/_24ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_iv_tradeMark"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/main_iv_tradeMark"
            style="@style/Theme.VolunteerApp.mImageCard"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_180sdp"
            android:src="@drawable/app_icon"
            android:padding="@dimen/_10sdp"
            app:shapeAppearance="@style/Theme.VolunteerApp.mImageCard"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView2"
            style="@style/Theme.VolunteerApp.mTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_tv_title"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:text="@string/app_description"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>