<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    tools:context=".view.DashboardScreen.ServiceSeekerDashboard.UploadRequestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/upload_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            style="@style/Theme.VolunteerApp.mToolbar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/upload_title"
                style="@style/Theme.VolunteerApp.mToolbarTitleStyle" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <Spinner
                    android:id="@+id/upload_sp_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:entries="@array/serviceType"
                    style="@style/Theme.VolunteerApp.mSpinnerStyle"/>

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_drop_down"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_25sdp" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/primary"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/upload_et_location"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    style="@style/Theme.VolunteerApp.mEditTextStyle"
                    android:inputType="textMultiLine"
                    android:drawableStart="@drawable/ic_location"
                    android:padding="@dimen/_5sdp"
                    android:hint="@string/task_loc"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/primary"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/upload_et_desc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    style="@style/Theme.VolunteerApp.mEditTextStyle"
                    android:inputType="textMultiLine"
                    android:drawableStart="@drawable/ic_info"
                    android:padding="@dimen/_5sdp"
                    android:hint="@string/task_desc"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/upload_startDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_tv_startDate"
                    android:gravity="start"
                    android:drawablePadding="@dimen/_8sdp"
                    style="@style/Theme.VolunteerApp.mLinkTextView"
                    app:drawableStartCompat="@drawable/ic_calender" />

                <TextView
                    android:id="@+id/upload_endDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_tv_endDate"
                    android:gravity="start"
                    android:drawablePadding="@dimen/_8sdp"
                    style="@style/Theme.VolunteerApp.mLinkTextView"
                    app:drawableStartCompat="@drawable/ic_calender"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/upload_btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_submit"
                    style="@style/Theme.VolunteerApp.mButton" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>